# gapper

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: ghpages  ghpages.yml  python-package.yml  python-publish.yml
.run/projectPytest/: Python tests in tests.run.xml  Python tests without integration tests.run.xml  Python tests.run.xml
API/errors/: index.html
API/gradescope_data_types/: index.html
API/hook/: index.html
API/pipeline_support/: index.html
API/problem/: index.html
API/problem_extras/: index.html
API/result_synthesizer/: index.html
API/test_case_wrapper/: index.html
API/test_cases/: index.html
API/test_result/: index.html
API/tester/: index.html
API/useful_types/: index.html
Contributing/how_to_contribute/: index.html
Examples/: index.html
Tutorials/Detailed-Usage/: index.html
Tutorials/Easy-Context/: index.html
Tutorials/Getting-Started/: index.html
Tutorials/Test-Result-(Proxy)/: index.html
Tutorials/Upload-Autograder/: index.html
Tutorials/Various-Function-Protocols/: index.html
Tutorials/gap_-Keywords/: index.html
css/: api-styling.css
docs/: index.md
docs/API/: errors.md  gradescope_data_types.md  hook.md  pipeline_support.md  problem.md  problem_extras.md  result_synthesizer.md  test_case_wrapper.md  test_cases.md  test_result.md  tester.md  useful_types.md  utils.md
docs/Contributing/: how_to_contribute.md
docs/Examples/: README.md
docs/Tutorials/: Detailed-Usage.md  Easy-Context.md  Examples.md  Getting-Started.md  Test-Result-(Proxy).md  Upload-Autograder.md  Various-Function-Protocols.md  gap_-Keywords.md
docs/css/: api-styling.css
examples/: sample_problems
search/: search_index.json
src/gap/: __init__.py
src/gap/cli/: commands.py  test_result_output.py
src/gap/core/: errors.py  file_handlers.py  problem.py  test_parameter.py  test_result.py  tester.py  unittest_wrapper.py  utils.py
src/gap/gradescope/: __init__.py  gradescope_output.py  main.py
src/gap/loaders/: configs_loaders.py  packed_tester.py  packed_tester_loaders.py
src/gapper/: __init__.py  __main__.py  _version.py  logger_utils.py
src/gapper/cli/: __init__.py  app.py  check.py  cli_options.py  commands.py  gen.py  login.py  rich_test_check_output.py  rich_test_result_output.py  run.py  run_in_prod.py  test_result_output.py  upload.py  utils.py
src/gapper/connect/: __init__.py
src/gapper/core/: errors.py  file_handlers.py  hook.py  injection.py  pipeline_support.py  problem.py  result_synthesizer.py  test_parameter.py  test_result.py  tester.py  types.py  unittest_wrapper.py  utils.py
src/gapper/gradescope/: __init__.py  main.py  vars.py
tests/: conftest.py  gs_connect_api_integration_test.py  integration_test.py  test_hook.py  test_problem.py  test_result_synthesizer.py  test_test_case_wrapper.py  test_test_param.py  test_test_result.py  test_tester.py  test_utils.py  test_zip_file_handle.py
tests/assets/gap_injection/: injected_content.py
tests/assets/injection_problems/: auto_inject.py  temp_injected_content.py
tests/assets/multiple_submissions_defined/: submission2.py
tests/assets/no_problem_file/: no_problem_here.py
tests/assets/no_submission_defined/: no_submission.py
tests/assets/packed_autograders/: add.py
tests/assets/problems/: README.md  add_numbers.py  assess_post_checks.py  assess_post_hooks.py  assess_post_tests.py  assess_pre_hooks.py  assess_pre_tests.py  bind_arguments.py  capture_context.py  easy_context.py  easy_context_with_locals.py  gap_kwargs_auto_populate.py  get_output_and_stdout.py  gradescope_connect.py  input_script.py  override_testing.py  pipeline_with_car.py  pre_tests_with_generator.py  sanity_check_with_gap_expect.py  tester_submission.py  use_input_and_output_capture.py
tests/assets/single_problem_defined/: single_problem.py
tests/assets/single_submission_defined/: tester_submission.py
tests/assets/submissions/: assess_post_checks.py  assess_post_hooks.py  assess_post_tests.py  assess_pre_hooks.py  assess_pre_tests.py  bind_arguments.py  capture_context.py  easy_context_with_locals.py  gap_kwargs_auto_populate.py  get_output_and_stdout.py  gradescope_connect.py  input_script.py  override_testing.py  (+3 more)
tests/gs_connect/: api_integration_test.py  conftest.py  gui_integration_test.py
(+58 files in other folders)
