[tool.poetry]
name = "gapper"
version = "0.1.0"
description = "Gradescope Assignment Packer"
authors = ["Heyuan Zeng <hi@universe.observer>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gap = "gapper.cli:app"
gapper = "gapper.cli:app"
gradescope-assignment-packer = "gapper.cli:app"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]

[tool.coverage.run]
omit = [
    "src/gap/gradescope/resources/*"
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
dill = "^0.3.7"
pytest-mock = "^3.11.1"
dataclasses-json = "^0.6.1"
dacite = "^1.8.1"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
pylint = "^3.0.1"
black = "^23.9.1"
isort = "^5.12.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
