[tool.poetry]
name = "gapper"
version = "1.3.4"
description = "Gradescope Autograder Packer"
authors = ["Heyuan Zeng <hi@universe.observer>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FlickerSoul/gapper"
documentation = "https://gapper.universe.observer"

[tool.poetry.scripts]
gap = "gapper.cli:app"
gapper = "gapper.cli:app"
gradescope-autograder-packer = "gapper.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]

[tool.coverage.run]
omit = ["src/gap/gradescope/resources/*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "I", "ICN"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
dill = "^0.3.7"
dataclasses-json = "^0.6.1"
dacite = "^1.8.1"
rich = "^13.6.0"
pytest = "^7.4.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
pylint = "^3.0.1"
coverage = "^7.3.2"
pre-commit = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
textual-dev = "^1.2.1"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.5"

[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.7"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.3.1"
pygments = "^2.16.1"
mkdocs-minify-plugin = "^0.7.1"

[tool.poetry.group.connect.dependencies]
textual = "^0.41.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
requests-toolbelt = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
